# judging-the-judges

./: .env.example  .gitignore  README.md  pyproject.toml
analysis/: analyze_results.py
analysis/figures/: table1_kappa.csv  table1_main_results.csv  table1_main_results.tex  table2_bias_summary.csv  table2_bias_summary.tex  table3_length_split.csv  table_llmbar_with_ci.csv
configs/: experiments.yaml  models.yaml  strategies.yaml
data/custom/: controlled_pairs.jsonl  generate_controlled.py  generate_round_robin.py  generate_style_ba.py  generate_truncation_pairs.py
results/aggregated/: claude-sonnet-4_B0_naive_custom_metrics.json  claude-sonnet-4_B0_naive_llmbar_metrics.json  claude-sonnet-4_B0_naive_mt_bench_metrics.json  claude-sonnet-4_S1_position_swap_custom_metrics.json  claude-sonnet-4_S1_position_swap_llmbar_metrics.json  claude-sonnet-4_S1_position_swap_mt_bench_metrics.json  claude-sonnet-4_S2_ensemble_same_mt_bench_metrics.json  claude-sonnet-4_S4_calibrated_rubric_custom_metrics.json  claude-sonnet-4_S4_calibrated_rubric_llmbar_metrics.json  claude-sonnet-4_S4_calibrated_rubric_mt_bench_metrics.json  claude-sonnet-4_S5_cot_forcing_custom_metrics.json  claude-sonnet-4_S5_cot_forcing_llmbar_metrics.json  claude-sonnet-4_S5_cot_forcing_mt_bench_metrics.json  claude-sonnet-4_S8_combined_budget_custom_metrics.json  claude-sonnet-4_S8_combined_budget_llmbar_metrics.json  (+73 more)
scripts/: download_data.sh  generate_friend_review.py  human_study_style.py  ingest_friend_answers.py  run_experiments.py  run_single.py
src/: data_loader.py  runner.py
(+28 files in other folders)
