[project]
name = "llm-judge-bias"
version = "0.1.0"
description = "Systematic evaluation of bias mitigation strategies in LLM-as-a-Judge pipelines"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.0.0",
    "anthropic[vertex]>=0.43.0",
    "httpx>=0.25.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "openai>=1.30.0",
    "tenacity>=8.2.0",
    "jsonlines>=4.0.0",
    "datasets>=2.18.0",
    "rich>=13.7.0",
    "truststore>=0.10.0",
    "statsmodels>=0.14.6",
    "jinja2>=3.1.6",
    "markdown>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.3.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
